<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_page"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:background="@color/surface"
        android:layout_weight="1" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/bottomTabs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:background="@color/surface"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/accent"
        app:tabIndicatorHeight="@dimen/dp_2"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/accent"
        app:tabTextColor="@color/text_secondary">

        <com.google.android.material.tabs.TabItem android:text="@string/tab_home" />
        <com.google.android.material.tabs.TabItem android:text="@string/tab_hot" />
        <com.google.android.material.tabs.TabItem android:text="@string/tab_mine" />
    </com.google.android.material.tabs.TabLayout>
</LinearLayout>
