<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/bg_floating_player" android:clipToOutline="true">

    <androidx.media3.ui.PlayerView android:id="@+id/floatingPlayerView" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@android:color/black" app:show_buffering="when_playing" app:shutter_background_color="@android:color/black" app:use_controller="false" />

    <ImageButton android:id="@+id/floatingCloseButton" android:layout_width="@dimen/dp_36" android:layout_height="@dimen/dp_36" android:layout_gravity="top|end" android:layout_margin="@dimen/dp_6" android:background="@drawable/bg_floating_control" android:contentDescription="@string/hardcoded_text_047" android:padding="@dimen/dp_6" android:src="@drawable/ic_close" />

    <ImageButton android:id="@+id/floatingPlayPauseButton" android:layout_width="@dimen/dp_40" android:layout_height="@dimen/dp_40" android:layout_gravity="bottom|center_horizontal" android:layout_marginBottom="@dimen/dp_8" android:background="@drawable/bg_floating_control" android:contentDescription="@string/hardcoded_text_031" android:padding="@dimen/dp_8" android:src="@drawable/ic_pause" />

    <ImageButton android:id="@+id/floatingRestoreHandle" android:layout_width="@dimen/dp_24" android:layout_height="match_parent" android:layout_gravity="start|center_vertical" android:background="@android:color/black" android:contentDescription="@string/floating_player_restore" android:src="@drawable/ic_back" app:tint="@android:color/white" android:visibility="gone" />
</FrameLayout>
